--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         </div>
         <div class="container">
             <div class="title title_fz16 promo__subtitle">
-                My name is Vladyslav Kovalskyi
+                My name is Vlad Kovalskyi
             </div>
             <h1 class="title title_fz48 promo__title">
                 I am a web developer<br>from Kyiv
