--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
                 <a href="#" class="work__item">
                     <img src="img/works/ipad.jpg" alt="test">
                 </a>
-                <a href="#" class="work__item horizonal">
+                <a href="#" class="work__item horizontal">
                     <img src="img/works/mac.jpg" alt="test">
                 </a>
             </div>
